--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
           path: dist/
 
   upload_pypi:
-    needs: [build_wheels, build_sdist]
+    needs: [build_release]
     runs-on: ubuntu-latest
     if: github.event_name == 'release' && github.event.action == 'published'
     steps:
