--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,17 +64,17 @@ jobs:
         with:
           path: dist/
 
-  #upload_pypi:
-    #needs: [build_release]
-    #runs-on: ubuntu-latest
-    #if: github.event_name == 'release' && github.event.action == 'published'
-    #steps:
-      #- uses: actions/download-artifact@v2
-        #with:
-          #name: artifact
-          #path: dist
+  upload_pypi:
+    needs: [build_release]
+    runs-on: ubuntu-latest
+    if: github.event_name == 'release' && github.event.action == 'published'
+    steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: artifact
+          path: dist
 
-      #- uses: pypa/gh-action-pypi-publish@master
-        #with:
-          #user: __token__
-          #password: ${{ secrets.PYPI_API_TOKEN }}
+      - uses: pypa/gh-action-pypi-publish@master
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
