--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
   - pydub
   - rich
   - sqlalchemy
+  - sqlglot
   - toolz
   - pip:
       - git+https://github.com/ibis-project/ibis.git
